# python-video-project

./: .gitignore  Montage Maker.bat  README.md  Setup (run once).bat  app.py  pyproject.toml  requirements.txt
config/: example.yaml
huggingface_space/: DEPLOY.md  README.md  app.py  requirements.txt
src/valmontage/: __init__.py  cli.py
src/valmontage/audio/: beats.py  energy.py
src/valmontage/editing/: effects.py  plan.py
src/valmontage/killdetect/: banner.py  highlight.py  manual.py  overlay.py  template.py
src/valmontage/modes/: beatmatch.py  freeze_finisher.py
src/valmontage/render/: compose.py  ffmpeg.py
src/valmontage/utils/: fetch.py
tests/: fetch_agent_icons.py  inspect_roi.py  make_click_track.py  validate_template.py
